--- a/test.yml
+++ b/test.yml
@@ -1,2 +1,14 @@
+
+server:
+  port: 11121
+
+spring:
+  application:
+    name: test-service
+    #cloud注册中心
+    cloud:
+      consul:
+        host: localhost
+        port: 8500
 a: 1
 
